Fix spacing

--- a/themes/devan/source/css/home.styl
+++ b/themes/devan/source/css/home.styl
@@ -26,7 +26,7 @@
           display: none
 
 .component
-  margin: 5px
+  margin: 1em 5px
   a
     .description
       color: darken(color-default, 25)
